backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "etl-automation" # Your static IP NAME
    networking.gke.io/managed-certificates: "thefrontmangames-com-cert" # NAME of your ManagedCertificate
    cert-manager.io/issue-temporary-certificate: "true"
    kubernetes.io/ingress.class: "gce"
    # Uncomment and set if you have a reserved static IP:
    # kubernetes.io/ingress.global-static-ip-name: "your-static-ip-name"
    # Uncomment and set if using GKE ManagedCertificate for HTTPS:
    # networking.gke.io/managed-certificates: "your-managed-cert-name"
spec:
  defaultBackend:
    service:
      name: frontend-service    # Change or remove if no frontend
      port:
        number: 80
  rules:
    - host: thefrontmangames.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service    # All other traffic
                port:
                  number: 80
  tls: # This section tells the Ingress to enable TLS for the specified hosts
    - hosts:
        - thefrontmangames.com
        - test99.thefrontmangames.com
